config for laptop

--- a/config.json
+++ b/config.json
@@ -1,14 +1,79 @@
 [
   {
-    "mons": "&DP-1",
+    "mons": "eDP-1,DP-1,HDMI-A-1",
     "cmds": [
-      "keyword monitor DP-1,1920x1080@144,0x0,1"
+      "hyprctl keyword monitor ${mons3},highrr,0x1080,1",
+      "hyprctl keyword monitor ${mons2},highrr,1920x0,1",
+      "hyprctl keyword monitor ${mons1},highrr,1920x1080,1.5",
+      "hyprctl keyword workspace 9,monitor:${mons3},default:true",
+      "hyprctl keyword workspace 1,monitor:${mons2},default:true",
+      "hyprctl keyword workspace 6,monitor:${mons1},default:true",
+      "hyprctl keyword workspace 2,monitor:${mons2}",
+      "hyprctl keyword workspace 3,monitor:${mons2}",
+      "hyprctl keyword workspace 4,monitor:${mons2}",
+      "hyprctl keyword workspace 5,monitor:${mons2}",
+      "hyprctl keyword workspace 7,monitor:${mons1}",
+      "hyprctl keyword workspace 8,monitor:${mons1}",
+      "hyprctl keyword workspace 9,monitor:${mons3}",
+      "hyprctl keyword workspace 0,monitor:${mons3}",
+      "~/build/eww/target/release/eww close-all",
+      "~/build/eww/target/release/eww open bar0",
+      "~/build/eww/target/release/eww open bar1",
+      "~/build/eww/target/release/eww open bar2"
     ]
   },
   {
-    "mons": "&eDP-1,&DP-2",
+    "mons": "eDP-1,DP-1",
     "cmds": [
-      "keyword monitor ${&mons1},1920x1080@144,0x0,1"
+      "hyprctl keyword monitor ${mons1},highres,0x1080,1.5",
+      "hyprctl keyword monitor ${mons2},highrr,0x0,1",
+      "hyprctl keyword workspace 6,monitor:${mons1},default:true",
+      "hyprctl keyword workspace 1,monitor:${mons2},default:true",
+      "hyprctl keyword workspace 2,monitor:${mons2}",
+      "hyprctl keyword workspace 3,monitor:${mons2}",
+      "hyprctl keyword workspace 4,monitor:${mons2}",
+      "hyprctl keyword workspace 5,monitor:${mons2}",
+      "hyprctl keyword workspace 7,monitor:${mons1}",
+      "hyprctl keyword workspace 8,monitor:${mons1}",
+      "hyprctl keyword workspace 9,monitor:${mons1}",
+      "~/build/eww/target/release/eww close-all",
+      "~/build/eww/target/release/eww open bar0",
+      "~/build/eww/target/release/eww open bar1"
+    ]
+  },
+  {
+    "mons": "HDMI-A-1,eDP-1",
+    "cmds": [
+      "hyprctl keyword monitor ${mons1},highrr,0x0,1.5",
+      "hyprctl keyword monitor ${mons2},highrr,1920x0,1.5",
+      "hyprctl keyword workspace 6,monitor:${mons1},default:true",
+      "hyprctl keyword workspace 1,monitor:${mons2},default:true",
+      "hyprctl keyword workspace 2,monitor:${mons2}",
+      "hyprctl keyword workspace 3,monitor:${mons2}",
+      "hyprctl keyword workspace 4,monitor:${mons2}",
+      "hyprctl keyword workspace 5,monitor:${mons2}",
+      "hyprctl keyword workspace 7,monitor:${mons1}",
+      "hyprctl keyword workspace 8,monitor:${mons1}",
+      "hyprctl keyword workspace 9,monitor:${mons1}",
+      "~/build/eww/target/release/eww close-all",
+      "~/build/eww/target/release/eww open bar0",
+      "~/build/eww/target/release/eww open bar1"
+    ]
+  },
+  {
+    "mons": "DP-1",
+    "cmds": [
+      "hyprctl keyword monitor ${mons1},1920x1080@75,0x0,1",
+      "~/build/eww/target/release/eww close all",
+      "~/build/eww/target/release/eww open bar0"
+    ]
+  },
+  {
+    "mons": "eDP-1",
+    "cmds": [
+      "hyprctl keyword monitor ${mons1},1920x1080@144,0x0,1.5",
+      "~/build/eww/target/release/eww close-all",
+      "~/build/eww/target/release/eww open bar0"
     ]
   }
 ]
